# osname

./: Cargo.toml  ChangeLog  Makefile.am  REAME.md  autogen.sh  configure.ac  osname.spec.in  rust_link_clib_example.spec.in
src/: Makefile.am  lib.rs
src/c/: config.h.in
src/rust/: Cargo.toml.in  Makefile.am  build.rs
src/rust/src/: importer.rs
